want to cook number can add

--- a/src/App.css
+++ b/src/App.css
@@ -40,3 +40,10 @@
 .read-the-docs {
   color: #888;
 }
+
+
+.body-sub-container{
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 15px;
+}
